--- a/my-app1/first1/src/components/li/modal.css
+++ b/my-app1/first1/src/components/li/modal.css
@@ -13,53 +13,98 @@
     max-width: 600px;
     margin: 0 auto;
     padding:25px;
+
 }
 .modal{
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1050;
-    padding:120px 20px;
-    background: rgba(51, 49, 49, 0.73);
-    display: none;
+position: fixed;
+top: 0;
+right: 0;
+bottom: 0;
+left: 0;
+z-index: 1050;
+padding:120px 20px;
+background: rgba(51, 49, 49, 0.73);
+display: none;
 }
 
 input[type=text], input[type=password] {
-    width: 60%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-s    box-sizing: border-box;
-    float: left;
+width: 60%;
+padding: 12px 20px;
+margin: 8px 0;
+display: inline-block;
+box-sizing: border-box;
+float: left;
+outline:none;
 }
 
 .button1 {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    -webkit-border-radius:0;
-    -moz-border-radius:0;
-    border-radius:0;
+background-color: #4CAF50;
+color: white;
+padding: 14px 20px;
+margin: 8px 0;
+border: none;
+cursor: pointer;
+width: 100%;
+-webkit-border-radius:0;
+-moz-border-radius:0;
+border-radius:0;
 
 
 }
 
 .button1:hover {
-    opacity: 0.8;
+opacity: 0.8;
 }
-.hidden,.hidden1{
+.hidden{
+color: red;
+display: none;
+font-size: 12px;
+float: right;
+}
+.hidden1{
     color: red;
-    display: none;
+    display: block;
     font-size: 12px;
     float: right;
 }
 
 .hidden3{
-    border:2px solid red ;
+ border:2px solid red ;
+
+}
+.shake {
+    -webkit-animation-name: shake;
+    animation-name: shake;
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+@-webkit-keyframes shake {
+    0%, 100% {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+    10%, 30%, 50%, 70%, 90% {
+        -webkit-transform: translate3d(-10px, 0, 0);
+        transform: translate3d(-10px, 0, 0);
+    }
+    20%, 40%, 60%, 80% {
+        -webkit-transform: translate3d(10px, 0, 0);
+        transform: translate3d(10px, 0, 0);
+    }
+}
+@keyframes shake {
+    0%, 100% {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0);
+    }
+    10%, 30%, 50%, 70%, 90% {
+        -webkit-transform: translate3d(-10px, 0, 0);
+        transform: translate3d(-10px, 0, 0);
+    }
+    20%, 40%, 60%, 80% {
+        -webkit-transform: translate3d(10px, 0, 0);
+        transform: translate3d(10px, 0, 0);
+    }
 }
