--- a/proj1/src/App.css
+++ b/proj1/src/App.css
@@ -7,7 +7,9 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
 }
-
+.App1{
+  clear: both;
+}
 .hover{
   width:223px;
   height:223px;
@@ -15,6 +17,7 @@ body{
   float: left;
   border:2px solid black;
   margin:1px;
+  transition:all 3s;
 }
 .hover1{
   transform: rotateY(180deg);
