--- a/proj1/src/App.css
+++ b/proj1/src/App.css
@@ -2,13 +2,17 @@
   text-align: center;
   
 }
-body{
-  background-image: url("images/orange.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
+
 .App1{
   clear: both;
+  text-align: left;
+}
+.chek
+{
+  width: 30px;
+  height: 30px;
+  vertical-align: middle;
+  text-align: left;
 }
 .hover{
   width:223px;
@@ -29,13 +33,56 @@ body{
   border:2px solid black;
   margin:1px;
 }
-input[type=text], input[type=password] {
-  width: 30%;
-  padding: 12px 20px;
+.search {
+  width: 0;
+  padding: 10px 0;
   margin: 8px 0;
   display: inline-block;
   box-sizing: border-box;
   outline:none;
+  transition: all 2s;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  border-color: rgba(123, 8, 131, 0.4);
+}
+
+.search1 {
+  width: 350px;
+  padding: 10px 0;
+  margin: 8px 0;
+  display: inline-block;
+  box-sizing: border-box;
+  outline:none;
+  transition: all 2s;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  border-color: rgba(123, 8, 131, 0.4);
+}
+.hidbat1{
+  display: none;
+}
+.hidbat{
+  width: 60px;
+  padding: 12px;
+  margin: 8px 25px;
+  display: inline-block;
+  box-sizing: border-box;
+  outline:none;
+  color: white;
+  background: purple;
+}
+.container{
+   width:300px;
+   height: 200px;
+   border:1px solid purple;
+ }
+.container1{
+  width:300px;
+  height: 200px;
+  border:1px solid purple;
+  display: none;
 }
 button{
   width: 20%;
