--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,300i,700,700i");
+@charset "UTF-8";
 @font-face {
   font-family: 'Stainless';
   font-style: normal;
@@ -42,20 +42,45 @@ a, .button {
 
 .button {
   background: transparent;
-  padding: 0px 22px;
+  padding: 0px 20px;
   color: #a29a9a;
   font-size: 21px;
-  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-  border: 1px solid #cbcbd3;
-  font-family: "proxima Nova Light"; }
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.45);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.45);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.45);
+  border: 1px solid #cbcbd3; }
+  @media (max-width: 660px) {
+    .button {
+      font-size: 15px; } }
   .button:hover {
-    margin-top: 5px;
+    margin-top: 3px;
     -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75); }
   .button:focus {
+    outline: none; }
+
+.button-more {
+  background: transparent;
+  padding: 0px 12px;
+  color: #434343;
+  font-size: 16px;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
+  border: 1px solid #434343; }
+  @media (max-width: 991px) {
+    .button-more {
+      margin: 10px 0; } }
+  .button-more:hover {
+    -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.25);
+    margin-top: 1px; }
+    @media (max-width: 991px) {
+      .button-more:hover {
+        margin: 10px 0; } }
+  .button-more:focus {
     outline: none; }
 
 .more-button {
@@ -96,15 +121,15 @@ header {
   @media (max-width: 1375px) {
     header {
       height: 650px; } }
-  @media (max-width: 880px) {
+  @media (max-width: 992px) {
     header {
-      height: 500px; } }
+      height: 580px; } }
   @media (max-width: 660px) {
     header {
       height: 400px; } }
 
 nav {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -112,7 +137,7 @@ nav {
   padding: 10px 20px;
   font-size: 0;
   transition: all 0.5s; }
-  @media (max-width: 991px) {
+  @media (max-width: 992px) {
     nav {
       display: flex;
       align-items: center; } }
@@ -136,7 +161,7 @@ nav {
       width: 200px;
       margin: 10px 0;
       display: inline-block; }
-    @media (max-width: 991px) {
+    @media (max-width: 992px) {
       nav .brand-area label {
         position: absolute;
         right: 56px; } }
@@ -152,10 +177,8 @@ nav {
       pointer-events: none;
       /* let the click pass trough */
       font-size: 16px;
-      transform: rotate(-90deg);
-      position: absolute;
-      top: 22px; }
-      @media (max-width: 991px) {
+      transform: rotate(-90deg); }
+      @media (max-width: 992px) {
         nav .brand-area label:after {
           top: 0; } }
     nav .brand-area label .selectpicker1 {
@@ -169,12 +192,13 @@ nav {
       -o-appearance: none;
       appearance: none;
       padding-right: 25px;
-      position: relative; }
+      position: relative;
+      font-weight: 300; }
       nav .brand-area label .selectpicker1 option {
         background: #000; }
     nav .brand-area .main-logo {
       width: 80%; }
-      @media (max-width: 991px) {
+      @media (max-width: 992px) {
         nav .brand-area .main-logo {
           width: 330px;
           position: absolute;
@@ -201,7 +225,7 @@ nav {
         vertical-align: middle; }
     nav .mobile-nav-button .page-nav-trigger {
       color: #c92127; }
-  @media (max-width: 991px) {
+  @media (max-width: 992px) {
     nav .main-navbar {
       display: none;
       overflow-y: scroll;
@@ -219,9 +243,8 @@ nav {
       position: relative; } }
   nav .main-navbar .hr-navbarMenu {
     position: absolute; }
-    @media (min-width: 991px) {
+    @media (min-width: 992px) {
       nav .main-navbar .hr-navbarMenu {
-        border-bottom: 1px solid rgba(255, 255, 255, 0.42);
         position: absolute;
         top: 60%;
         width: 81%;
@@ -248,8 +271,7 @@ nav {
       padding: 10px;
       color: #828080;
       background: rgba(255, 255, 255, 0.02);
-      font-size: 18px;
-      font-family: 'Proxima Nova Light'; }
+      font-size: 18px; }
       nav .main-navbar ul a.active {
         border-bottom: 2px solid #FFF;
         color: #FFF; }
@@ -320,42 +342,47 @@ nav {
 
 .homepage-slider {
   margin-top: 230px; }
-  @media (max-width: 991px) {
+  @media (max-width: 992px) {
     .homepage-slider {
       margin-top: 100px; } }
-  .homepage-slider .item .col-md-6 {
+  @media (max-width: 660px) {
+    .homepage-slider {
+      margin-top: 75px; } }
+  .homepage-slider .item {
     text-align: right; }
-    @media (max-width: 1375px) {
-      .homepage-slider .item .col-md-6 {
-        text-align: center; } }
-    .homepage-slider .item .col-md-6 h1 {
-      color: #fff;
-      width: 100%; }
-      @media (max-width: 880px) {
-        .homepage-slider .item .col-md-6 h1 {
-          font-size: 25px; } }
-      @media (max-width: 500px) {
-        .homepage-slider .item .col-md-6 h1 {
-          font-size: 20px; } }
-    .homepage-slider .item .col-md-6 h3 {
-      width: 100%;
-      font-size: 28px; }
-      @media (max-width: 880px) {
-        .homepage-slider .item .col-md-6 h3 {
-          font-size: 20px; } }
-      @media (max-width: 500px) {
-        .homepage-slider .item .col-md-6 h3 {
-          font-size: 15px; } }
-    @media (max-width: 991px) {
-      .homepage-slider .item .col-md-6 img {
-        width: 330px;
-        margin: 0 auto; } }
-    @media (max-width: 880px) {
-      .homepage-slider .item .col-md-6 img {
-        width: 220px; } }
     @media (max-width: 660px) {
+      .homepage-slider .item {
+        text-align: center; } }
+    .homepage-slider .item .col-md-6 {
+      padding: 0 50px; }
+      .homepage-slider .item .col-md-6 h1 {
+        color: #fff;
+        width: 100%; }
+        @media (max-width: 992px) {
+          .homepage-slider .item .col-md-6 h1 {
+            font-size: 25px; } }
+        @media (max-width: 660px) {
+          .homepage-slider .item .col-md-6 h1 {
+            font-size: 20px; } }
+      .homepage-slider .item .col-md-6 h3 {
+        width: 100%;
+        font-size: 28px; }
+        @media (max-width: 992px) {
+          .homepage-slider .item .col-md-6 h3 {
+            font-size: 20px; } }
+        @media (max-width: 660px) {
+          .homepage-slider .item .col-md-6 h3 {
+            font-size: 15px; } }
       .homepage-slider .item .col-md-6 img {
-        width: 140px; } }
+        min-width: 155px;
+        margin: 0 auto; }
+        @media (max-width: 992px) {
+          .homepage-slider .item .col-md-6 img {
+            margin: 0 auto;
+            width: 50%; } }
+        @media (max-width: 660px) {
+          .homepage-slider .item .col-md-6 img {
+            width: 30%; } }
   .homepage-slider .owl-prev {
     left: 0;
     top: 50%;
@@ -378,5 +405,297 @@ nav {
     font-size: 18px; }
     .homepage-slider .owl-next:hover {
       color: red; }
+
+.first {
+  background-image: url(../mockup/images/HOME-PAGE/n2.jpg);
+  background-size: cover;
+  background-position: center; }
+  .first .content {
+    background-image: -moz-linear-gradient(180deg, #d9d9d9 0%, white 50%, #d9d9d9 100%);
+    background-image: -webkit-linear-gradient(180deg, #d9d9d9 0%, white 50%, #d9d9d9 100%);
+    background-image: -ms-linear-gradient(180deg, #d9d9d9 0%, white 50%, #d9d9d9 100%);
+    box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.15);
+    padding: 15px;
+    position: relative;
+    top: -45px; }
+    .first .content h1 {
+      border-bottom: 1px solid;
+      font-size: 29px;
+      border-bottom: 1px solid;
+      font-size: 29px;
+      margin: 0 0 14px 0; }
+    .first .content p {
+      color: #434343; }
+    .first .content img {
+      width: 100%; }
+      @media (max-width: 1200px) {
+        .first .content img {
+          height: 306px;
+          object-fit: cover; } }
+  .first .slide2 {
+    height: 420px; }
+
+.ninth-section-carousel .owl-dots {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  transition: all 0.5s !important; }
+  .ninth-section-carousel .owl-dots .owl-dot {
+    margin: 0 0 20px 0;
+    display: block;
+    border-radius: 60px;
+    transition: all 0.5s;
+    width: 45px;
+    height: 45px; }
+    .ninth-section-carousel .owl-dots .owl-dot:hover {
+      background: rgba(0, 0, 0, 0.64);
+      padding-right: 300px;
+      border-radius: 60px; }
+    .ninth-section-carousel .owl-dots .owl-dot span {
+      width: 40px;
+      height: 40px;
+      background: transparent !important; }
+.ninth-section-carousel .myclass, .ninth-section-carousel .owl-dot:hover::after, .ninth-section-carousel .owl-dot:first-child:hover span::after, .ninth-section-carousel .owl-dot:nth-child(2):hover span::after, .ninth-section-carousel .owl-dot:nth-child(3):hover span::after, .ninth-section-carousel .owl-dot:nth-child(4):hover span::after, .ninth-section-carousel .owl-dot:nth-child(5):hover span::after, .ninth-section-carousel .owl-dot:nth-child(6):hover span::after {
+  font-size: 16px;
+  position: absolute;
+  right: 75px;
+  color: #fff;
+  margin-top: 13px;
+  width: 200px; }
+.ninth-section-carousel .myclass1, .ninth-section-carousel .owl-dot:first-child span::before, .ninth-section-carousel .owl-dot:nth-child(2) span::before, .ninth-section-carousel .owl-dot:nth-child(3) span::before, .ninth-section-carousel .owl-dot:nth-child(4) span::before, .ninth-section-carousel .owl-dot:nth-child(5) span::before, .ninth-section-carousel .owl-dot:nth-child(6) span::before {
+  background: #fff;
+  font-size: 16px;
+  position: absolute;
+  right: 0px;
+  color: #000;
+  margin-top: 0px;
+  width: 45px;
+  height: 45px;
+  border-radius: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid; }
+.ninth-section-carousel .owl-dot span::after {
+  content: "";
+  transition: opacity 2s;
+  opacity: 0; }
+.ninth-section-carousel .owl-dot:hover span::after {
+  opacity: 1; }
+.ninth-section-carousel .owl-dot:first-child:hover span::after {
+  content: "Web design"; }
+.ninth-section-carousel .owl-dot:first-child span::before {
+  content: "1"; }
+.ninth-section-carousel .owl-dot:nth-child(2):hover span::after {
+  content: "Search Engine Optimisation"; }
+.ninth-section-carousel .owl-dot:nth-child(2) span::before {
+  content: "2"; }
+.ninth-section-carousel .owl-dot:nth-child(3):hover span::after {
+  content: "Web hosting"; }
+.ninth-section-carousel .owl-dot:nth-child(3) span::before {
+  content: "3"; }
+.ninth-section-carousel .owl-dot:nth-child(4):hover span::after {
+  content: "Applications and Software"; }
+.ninth-section-carousel .owl-dot:nth-child(4) span::before {
+  content: "4"; }
+.ninth-section-carousel .owl-dot:nth-child(5):hover span::after {
+  content: "Systems and Network"; }
+.ninth-section-carousel .owl-dot:nth-child(5) span::before {
+  content: "5"; }
+.ninth-section-carousel .owl-dot:nth-child(6):hover span::after {
+  content: "VOIP solutions"; }
+.ninth-section-carousel .owl-dot:nth-child(6) span::before {
+  content: "6"; }
+.ninth-section-carousel .owl-dot span::before {
+  background: #fff;
+  color: #000;
+  border-radius: 60px;
+  border: 2px solid; }
+.ninth-section-carousel .owl-dot:hover span::before {
+  background: transparent;
+  color: #fff;
+  border-color: transparent; }
+.ninth-section-carousel .item a {
+  color: red; }
+.ninth-section-carousel .item h3 {
+  margin-bottom: 30px;
+  border-bottom: 1px solid;
+  width: 40%;
+  color: #8e8b8b; }
+  @media (max-width: 470px) {
+    .ninth-section-carousel .item h3 {
+      width: 60%;
+      font-size: 20px; } }
+.ninth-section-carousel .item h4 {
+  font-weight: 700; }
+  @media (max-width: 470px) {
+    .ninth-section-carousel .item h4 {
+      font-size: 18px; } }
+.ninth-section-carousel .item p {
+  width: 72%; }
+  @media (max-width: 470px) {
+    .ninth-section-carousel .item p {
+      width: 83%; } }
+.ninth-section-carousel .item img {
+  width: 158px; }
+  @media (max-width: 470px) {
+    .ninth-section-carousel .item img {
+      width: 120px; } }
+
+.second {
+  background-image: url(../mockup/images/HOME-PAGE/partner-fon.png);
+  background-size: cover;
+  background-position: center;
+  height: 280px; }
+  .second .row {
+    margin-bottom: 20px; }
+    .second .row h3 {
+      color: white; }
+    .second .row hr {
+      width: 300px; }
+  .second .site-second-carousel .item img {
+    width: 60%;
+    margin: 0 auto; }
+    @media (max-width: 599px) {
+      .second .site-second-carousel .item img {
+        width: 35%; } }
+  .second .site-second-carousel .owl-prev {
+    background: rgba(239, 231, 231, 0.16);
+    font-size: 16px;
+    border-radius: 66px;
+    position: absolute;
+    padding: 0 8px;
+    left: 0;
+    top: 50px; }
+  .second .site-second-carousel .owl-next {
+    right: 0;
+    background: rgba(239, 231, 231, 0.16);
+    font-size: 16px;
+    border-radius: 66px;
+    position: absolute;
+    padding: 0 8px;
+    top: 50px; }
+
+.our-team {
+  padding: 35px 0; }
+  .our-team .row {
+    margin: 15px 0; }
+    .our-team .row h3 {
+      color: #8e8b8b; }
+    .our-team .row img {
+      margin: 0 auto;
+      border: 2px solid #948b8b; }
+
+.footer {
+  -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.23);
+  -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.23);
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.23); }
+  .footer .contacts {
+    background: #0e0b17;
+    text-align: center; }
+    .footer .contacts h3 {
+      color: #8e8b8b;
+      margin: 15px 0; }
+  .footer .information {
+    padding: 20px 0; }
+    .footer .information ul {
+      padding: 0; }
+      .footer .information ul li {
+        list-style-type: none; }
+        .footer .information ul li a {
+          color: #8e8b8b;
+          cursor: pointer; }
+        .footer .information ul li:before {
+          content: "·";
+          font-size: 60px;
+          vertical-align: bottom;
+          line-height: 25px;
+          margin-right: 10px; }
+    .footer .information .mail input {
+      background: #0e0b17;
+      color: #eee;
+      float: left;
+      border: none;
+      height: 40px;
+      width: 75%;
+      padding: 0 15px;
+      outline: none;
+      border-top-left-radius: 4px; }
+    .footer .information .mail button {
+      background: #3c3947;
+      color: #fff;
+      border: none;
+      width: 25%;
+      height: 40px;
+      outline: none;
+      border-top-right-radius: 4px; }
+    .footer .information .mail form textarea {
+      line-height: 2em;
+      resize: none;
+      border-top-left-radius: 0;
+      border-top-right-radius: 0; }
+    .footer .information .social img {
+      width: 120px;
+      margin: 10px 0; }
+    .footer .information .fa-phone {
+      color: red; }
+      .footer .information .fa-phone:before {
+        content: "\f095";
+        border: 2px solid red;
+        padding: 2px 4px;
+        border-radius: 60px; }
+    .footer .information p {
+      margin: 0;
+      font-size: 14px;
+      line-height: 20px;
+      color: #8e8b8b; }
+      .footer .information p span {
+        color: red; }
+        .footer .information p span .fa-envelope-o, .footer .information p span .fa-map-marker {
+          font-size: 24px;
+          width: 25px;
+          text-align: center; }
+
+.footer-logo {
+  padding: 20px; }
+  .footer-logo img {
+    max-width: 80%; }
+  .footer-logo p {
+    font-size: 13px;
+    color: #8e8b8b;
+    margin-top: 25px; }
+
+.scrolloff {
+  pointer-events: none; }
+
+.canvas_wrapper {
+  height: 2000px; }
+
+#canvas {
+  background-color: red;
+  margin-top: 500px; }
+
+#map_canvas {
+  height: 200px;
+  width: 100%; }
+
+.secondPage {
+  position: fixed;
+  width: 100%; }
+  .secondPage header {
+    transition: all 0.3s;
+    height: 200px; }
+    @media (max-width: 991px) {
+      .secondPage header {
+        height: 100px; } }
+    .secondPage header a img {
+      position: absolute;
+      left: 30px;
+      width: 50px;
+      z-index: 999999999; }
+    .secondPage header .brand-area {
+      float: right; }
+      .secondPage header .brand-area label::after {
+        top: 0; }
 
 /*# sourceMappingURL=style.css.map */
